applications/openeuler-website-docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website-docs
  name: website-docs
